--- a/package.json
+++ b/package.json
@@ -1,6 +1,26 @@
 {
-	"devDependencies": {
-		"eslint": "^8.41.0",
-		"@antfu/eslint-config": "^0.39.3"
-	}
+  "devDependencies": {
+    "eslint": "^8.41.0",
+    "@antfu/eslint-config": "^0.39.3"
+  },
+  "name": "unocss-base",
+  "description": "mpx unocss base preset",
+  "version": "1.0.0",
+  "main": "lib/index.js",
+  "directories": {
+    "lib": "lib"
+  },
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/pagnkelly/unocss-base.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/pagnkelly/unocss-base/issues"
+  },
+  "homepage": "https://github.com/pagnkelly/unocss-base#readme"
 }
